Update Svelte configuration and add Node adapter
- Added '@sveltejs/adapter-node' to package.json dependencies for improved server-side rendering.
- Updated svelte.config.js to use the Node adapter and included dotenv for environment variable management.

These changes enhance the application's deployment capabilities and configuration management.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^5.4.4"
     },
     "dependencies": {
+        "@sveltejs/adapter-node": "^5.2.10",
         "@types/lodash": "^4.14.202",
         "@types/pg": "^8.10.9",
         "date-fns": "^2.30.0",
