--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "date-fns": "^2.30.0",
         "drizzle-kit": "^0.30.0",
         "drizzle-orm": "^0.38.0",
+        "express": "^4.21.2",
         "lodash": "^4.17.21",
         "postgres": "^3.4.5",
         "zod": "^3.23.8"
