Enhance function name handling and add change-case dependency
- Added the 'change-case' library to standardize function name formatting.
- Refactored the API function to use 'change-case' for slugifying function names, improving consistency and readability.
- Updated the import order in the init-function server file for better organization.

These changes improve the maintainability and clarity of function name handling in the API.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@sveltejs/adapter-node": "^5.2.10",
 		"@types/lodash": "^4.14.202",
 		"@types/pg": "^8.10.9",
+		"change-case": "^5.4.4",
 		"date-fns": "^2.30.0",
 		"drizzle-kit": "^0.30.0",
 		"drizzle-orm": "^0.38.0",
